--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>แหวนแต่งงาน | Mongkolsiri Diamond</title>
+
+  <!-- Facebook Pixel -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '127978927946856');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=127978927946856&ev=PageView&noscript=1"
+  /></noscript>
+
   <style>
     body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; background: #fff; color: #333; }
     .hero { text-align: center; padding: 2rem 1rem; background: #fefefe; }
@@ -12,6 +29,7 @@
     .hero p { font-size: 1.1rem; color: #666; }
     .gallery { display: flex; flex-direction: column; align-items: center; gap: 2rem; padding: 2rem 1rem; }
     .gallery img { width: 100%; max-width: 800px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
+    .gallery p { font-size: 1.1rem; color: #555; text-align: center; margin-top: -1rem; }
     .details { padding: 2rem 1rem; background: #fafafa; text-align: center; }
     .details p { font-size: 1.1rem; line-height: 1.6; }
     .cta { text-align: center; padding: 2rem 1rem; }
@@ -26,21 +44,36 @@
 
   <div class="gallery">
     <img src="ring_image_1.jpeg" alt="แหวนแต่งงาน">
+    <p>💎 ดีไซน์หรู ดูคลาสสิก เหมาะกับทุกคู่รัก</p>
+
     <img src="ring_image_2.jpeg" alt="แหวนแต่งงาน">
+    <p>✨ เพชรแท้คัดเกรด สะท้อนแสงทุกมุมมอง</p>
+
     <img src="ring_image_3.jpeg" alt="แหวนแต่งงาน">
+    <p>💍 สวมใส่ง่าย ใส่ได้ทุกวัน ไม่บาดนิ้ว</p>
+
     <img src="ring_image_4.jpeg" alt="แหวนแต่งงาน">
+    <p>🎁 พร้อมกล่องของขวัญพรีเมียม สำหรับวันสำคัญ</p>
   </div>
 
   <div class="details">
-    <p>💍 งานฝีมือปราณีตจากช่างผู้เชี่ยวชาญ<br>
-       ✨ พร้อมกล่องกำมะหยี่หรูหรา<br>
-       🧡 บริการสลักชื่อ/วันที่สำคัญฟรี<br>
-       📦 จัดส่งฟรีทั่วประเทศ</p>
+    <p>
+      💍 งานฝีมือปราณีตจากช่างผู้เชี่ยวชาญ<br>
+      ✨ พร้อมกล่องกำมะหยี่หรูหรา<br>
+      🧡 บริการสลักชื่อ/วันที่สำคัญฟรี<br>
+      📦 จัดส่งฟรีทั่วประเทศ
+    </p>
   </div>
 
   <div class="cta">
-    <a href="https://lin.ee/ZRrK7cl" target="_blank">💬 สอบถามผ่าน LINE</a>
-    <a href="https://maps.app.goo.gl/Gy1417mtFmiCC1ud9" target="_blank">📍 ดูแผนที่หน้าร้าน</a>
+    <a href="https://lin.ee/ZRrK7cl" target="_blank"
+       onclick="fbq('track', 'Contact');">
+       💬 สอบถามผ่าน LINE
+    </a>
+    <a href="https://maps.app.goo.gl/Gy1417mtFmiCC1ud9" target="_blank"
+       onclick="fbq('track', 'ViewLocation');">
+       📍 ดูแผนที่หน้าร้าน
+    </a>
   </div>
 </body>
 </html>
