--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="cta">
     <a href="https://lin.ee/ZRrK7cl" target="_blank"
-       onclick="fbq('track', 'Contact');">
+       onclick="fbq('track', 'Lead');">
        💬 สอบถามผ่าน LINE
     </a>
     <a href="https://maps.app.goo.gl/Gy1417mtFmiCC1ud9" target="_blank"
