--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     .details p { font-size: 1.1rem; line-height: 1.6; }
     .cta { text-align: center; padding: 2rem 1rem; }
     .cta a { display: inline-block; background: #000; color: #fff; padding: 0.75rem 1.5rem; text-decoration: none; border-radius: 8px; margin: 0.5rem; font-size: 1.1rem; }
+    footer { text-align: center; padding: 2rem; font-size: 0.9rem; color: #888; }
   </style>
 </head>
 <body>
@@ -75,5 +76,9 @@
        📍 ดูแผนที่หน้าร้าน
     </a>
   </div>
+
+  <footer>
+    &copy; 2025 Mongkolsiri Diamond | <a href="privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
+  </footer>
 </body>
 </html>
