--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   <style>
     body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; background: #fff; color: #333; }
     .hero { text-align: center; padding: 2rem 1rem; background: #fefefe; }
-    .hero h1 { font-size: 2rem; color: #111; margin-bottom: 1rem; }
-    .hero p { font-size: 1.1rem; color: #666; }
+    .hero h1 { font-size: 2rem; color: #111; margin-bottom: 0.5rem; }
+    .hero p { font-size: 1.1rem; color: #666; margin-top: 0.5rem; }
+    .brand { font-weight: bold; font-size: 1.2rem; margin: 1rem 0; color: #000; }
+    .hero .top-cta a { display: inline-block; background: #25D366; color: #fff; padding: 0.6rem 1.4rem; border-radius: 6px; text-decoration: none; font-size: 1.1rem; margin-top: 1rem; }
     .gallery { display: flex; flex-direction: column; align-items: center; gap: 2rem; padding: 2rem 1rem; }
     .gallery img { width: 100%; max-width: 800px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
     .gallery p { font-size: 1.1rem; color: #555; text-align: center; margin-top: -1rem; }
@@ -41,6 +43,10 @@
   <div class="hero">
     <h1>เพชรแท้ ความรักแท้<br>แหวนคู่ที่ใช่... เพื่อวันที่สำคัญที่สุดในชีวิต</h1>
     <p>คัดสรรเพชรแท้ ดีไซน์หรูเฉพาะคู่คุณ พร้อมบริการสลักชื่อ ส่งฟรีทั่วไทย</p>
+    <div class="brand">Mongkolsiri Diamond</div>
+    <div class="top-cta">
+      <a href="https://lin.ee/ZRrK7cl" target="_blank" onclick="fbq('track', 'Lead');">💬 ทัก LINE เลย</a>
+    </div>
   </div>
 
   <div class="gallery">
