--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     .hero p { font-size: 1.1rem; color: #666; margin-top: 0.5rem; }
     .brand { font-weight: bold; font-size: 1.2rem; margin: 1rem 0; color: #000; }
     .hero .top-cta a { display: inline-block; background: #25D366; color: #fff; padding: 0.6rem 1.4rem; border-radius: 6px; text-decoration: none; font-size: 1.1rem; margin-top: 1rem; }
+    .video { text-align: center; padding: 2rem 1rem; }
     .gallery { display: flex; flex-direction: column; align-items: center; gap: 2rem; padding: 2rem 1rem; }
     .gallery img { width: 100%; max-width: 800px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
     .gallery p { font-size: 1.1rem; color: #555; text-align: center; margin-top: -1rem; }
@@ -61,6 +62,15 @@
     </div>
   </div>
 
+  <!-- วิดีโอโปรโมต -->
+  <div class="video">
+    <video width="100%" controls>
+      <source src="SaveTik.co_7421006142152756488.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <!-- แกลเลอรีรูป -->
   <div class="gallery">
     <img src="ring_image_1.jpeg" alt="แหวนแต่งงาน">
     <p>💎 ดีไซน์หรู ดูคลาสสิก เหมาะกับทุกคู่รัก</p>
