--- a/index.html
+++ b/index.html
@@ -31,22 +31,119 @@
     gtag('config', 'AW-16455237731');
   </script>
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+
   <style>
-    body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; background: #fff; color: #333; }
-    .hero { text-align: center; padding: 2rem 1rem; background: #fefefe; }
-    .hero h1 { font-size: 2rem; color: #111; margin-bottom: 0.5rem; }
-    .hero p { font-size: 1.1rem; color: #666; margin-top: 0.5rem; }
-    .brand { font-weight: bold; font-size: 1.2rem; margin: 1rem 0; color: #000; }
-    .hero .top-cta a { display: inline-block; background: #25D366; color: #fff; padding: 0.6rem 1.4rem; border-radius: 6px; text-decoration: none; font-size: 1.1rem; margin-top: 1rem; }
-    .video { text-align: center; padding: 2rem 1rem; }
-    .gallery { display: flex; flex-direction: column; align-items: center; gap: 2rem; padding: 2rem 1rem; }
-    .gallery img { width: 100%; max-width: 800px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-    .gallery p { font-size: 1.1rem; color: #555; text-align: center; margin-top: -1rem; }
-    .details { padding: 2rem 1rem; background: #fafafa; text-align: center; }
-    .details p { font-size: 1.1rem; line-height: 1.6; }
-    .cta { text-align: center; padding: 2rem 1rem; }
-    .cta a { display: inline-block; background: #000; color: #fff; padding: 0.75rem 1.5rem; text-decoration: none; border-radius: 8px; margin: 0.5rem; font-size: 1.1rem; }
-    footer { text-align: center; padding: 2rem; font-size: 0.9rem; color: #888; }
+    body { 
+      font-family: 'Merriweather', serif; 
+      margin: 0; padding: 0; 
+      background: #f9f7f4; 
+      color: #333; 
+    }
+    .hero { 
+      text-align: center; 
+      padding: 3rem 1rem; 
+      background: #fff; 
+      border-bottom: 1px solid #eee; 
+    }
+    .hero h1 { 
+      font-family: 'Playfair Display', serif; 
+      font-size: 2.5rem; 
+      color: #111; 
+      margin-bottom: 1rem; 
+    }
+    .hero p { 
+      font-size: 1.2rem; 
+      color: #555; 
+      margin-top: 0.5rem; 
+    }
+    .brand { 
+      font-weight: bold; 
+      font-size: 1.3rem; 
+      margin: 1.5rem 0; 
+      color: #222; 
+      letter-spacing: 0.5px;
+    }
+    .hero .top-cta a { 
+      display: inline-block; 
+      background: #25D366; 
+      color: #fff; 
+      padding: 0.8rem 1.8rem; 
+      border-radius: 50px; 
+      text-decoration: none; 
+      font-size: 1.1rem; 
+      margin-top: 1.5rem; 
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
+    }
+    .hero .top-cta a:hover {
+      background: #1ebc5e;
+    }
+    .video { 
+      text-align: center; 
+      padding: 2.5rem 1rem; 
+      background: #fff; 
+    }
+    .gallery { 
+      display: flex; 
+      flex-direction: column; 
+      align-items: center; 
+      gap: 2.5rem; 
+      padding: 3rem 1rem; 
+    }
+    .gallery img { 
+      width: 100%; 
+      max-width: 800px; 
+      border-radius: 16px; 
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1); 
+      border: 1px solid #eaeaea;
+    }
+    .gallery p { 
+      font-size: 1.15rem; 
+      color: #444; 
+      text-align: center; 
+      margin-top: -1rem; 
+      font-style: italic;
+    }
+    .details { 
+      padding: 3rem 1rem; 
+      background: #fafafa; 
+      text-align: center; 
+      border-top: 1px solid #eee; 
+    }
+    .details p { 
+      font-size: 1.2rem; 
+      line-height: 1.8; 
+      color: #333;
+    }
+    .cta { 
+      text-align: center; 
+      padding: 3rem 1rem; 
+    }
+    .cta a { 
+      display: inline-block; 
+      background: #000; 
+      color: #fff; 
+      padding: 0.8rem 2rem; 
+      text-decoration: none; 
+      border-radius: 50px; 
+      margin: 0.5rem; 
+      font-size: 1.15rem; 
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      transition: all 0.3s ease;
+    }
+    .cta a:hover {
+      background: #222;
+    }
+    footer { 
+      text-align: center; 
+      padding: 2rem; 
+      font-size: 0.9rem; 
+      color: #999; 
+      background: #f3f3f3; 
+      border-top: 1px solid #e0e0e0; 
+    }
   </style>
 </head>
 <body>
@@ -62,14 +159,13 @@
     </div>
   </div>
 
-<!-- วิดีโอโปรโมต -->
-<div class="video">
-  <video width="100%" autoplay muted playsinline loop>
-    <source src="SaveTik.co_7421006142152756488.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-</div>
-
+  <!-- วิดีโอโปรโมต -->
+  <div class="video">
+    <video width="100%" autoplay muted playsinline loop>
+      <source src="SaveTik.co_7421006142152756488.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
 
   <!-- แกลเลอรีรูป -->
   <div class="gallery">
