--- a/index.html
+++ b/index.html
@@ -159,13 +159,14 @@
     </div>
   </div>
 
-  <!-- วิดีโอโปรโมต -->
-  <div class="video">
-    <video width="100%" autoplay muted playsinline loop>
-      <source src="SaveTik.co_7421006142152756488.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
+<!-- วิดีโอโปรโมต -->
+<div class="video">
+  <video width="100%" autoplay muted playsinline loop controls>
+    <source src="SaveTik.co_7421006142152756488.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
 
   <!-- แกลเลอรีรูป -->
   <div class="gallery">
