--- a/index.html
+++ b/index.html
@@ -3,7 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>แหวนแต่งงาน | Mongkolsiri Diamond</title>
+  <title>แหวนเพชรแท้ GIA | แหวนแต่งงาน เพชรแท้ ราคาดี Mongkolsiri Diamond</title>
+  <meta name="description" content="แหวนเพชรแท้ GIA แหวนแต่งงาน เพชรแท้คัดเกรด ประกบประกาย ดีไซน์หรู ราคาพิเศษ มีใบรับรอง GIA พร้อมบริการสลักชื่อ ส่งฟรีทั่วไทย ร้าน Mongkolsiri Diamond">
+  <meta name="keywords" content="แหวนเพชรแท้ GIA, แหวนเพชรแต่งงาน, แหวนเพชร, เพชร GIA, แหวนแต่งงาน, wedding ring, diamond ring, ร้านแหวนเพชรแท้, ร้านเพชร GIA, diamond gia, diamond wedding ring">
+  <link rel="canonical" href="https://tuowzz.github.io/mbshopz.github.io/wedding-ring" />
+  <meta name="robots" content="index,follow,max-image-preview:large" />
+
+  <!-- Open Graph for Facebook -->
+  <meta property="og:title" content="แหวนเพชรแท้ GIA | แหวนแต่งงาน Mongkolsiri Diamond" />
+  <meta property="og:description" content="เลือกแหวนเพชรแต่งงานและเพชรแท้ GIA ดีไซน์หรู มีใบรับรอง ส่งฟรีทั่วไทย Mongkolsiri Diamond" />
+  <meta property="og:image" content="https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg" />
+  <meta property="og:url" content="https://tuowzz.github.io/mbshopz.github.io/wedding-ring" />
+  <meta property="og:type" content="product" />
+  <meta property="og:site_name" content="Mongkolsiri Diamond">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="แหวนเพชรแท้ GIA | แหวนแต่งงาน Mongkolsiri Diamond">
+  <meta name="twitter:description" content="เลือกแหวนเพชรแต่งงานและเพชรแท้ GIA ดีไซน์หรู มีใบรับรอง ส่งฟรีทั่วไทย Mongkolsiri Diamond">
+  <meta name="twitter:image" content="https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg">
+
+  <!-- Structured Data Product & Local Business -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Product",
+    "name": "แหวนเพชรแท้ GIA",
+    "image": [
+      "https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg"
+    ],
+    "description": "แหวนเพชรแท้ GIA สำหรับคู่แต่งงาน ดีไซน์หรู มีใบรับรอง GIA แท้ ส่งฟรีทั่วไทย ร้าน Mongkolsiri Diamond",
+    "brand": { "@type": "Brand", "name": "Mongkolsiri Diamond" },
+    "offers": {
+      "@type": "Offer",
+      "priceCurrency": "THB",
+      "availability": "https://schema.org/InStock"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "reviewCount": "150"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "JewelryStore",
+    "name": "Mongkolsiri Diamond",
+    "image": "https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg",
+    "priceRange": "฿฿฿",
+    "telephone": "+66985888888",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "xx ถนนเพชรเกษม",
+      "addressLocality": "กรุงเทพมหานคร",
+      "postalCode": "10160",
+      "addressCountry": "TH"
+    },
+    "url": "https://tuowzz.github.io/mbshopz.github.io/wedding-ring"
+  }
+  </script>
 
   <!-- Facebook Pixel -->
   <script>
@@ -18,9 +78,10 @@
     fbq('init', '127978927946856');
     fbq('track', 'PageView');
   </script>
-  <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=127978927946856&ev=PageView&noscript=1"
-  /></noscript>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=127978927946856&ev=PageView&noscript=1"/>
+  </noscript>
 
   <!-- Google Ads Tag -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16455237731"></script>
@@ -34,228 +95,55 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet" />
 
+  <!-- Favicon -->
+  <link rel="icon" href="https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg" type="image/jpeg" />
+
   <style>
-    /* Reset & base */
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0; padding: 0;
-      font-family: 'Merriweather', serif;
-      background: #f9f7f4;
-      color: #2b2b2b;
-      line-height: 1.6;
-    }
-    a {
-      color: #b68e2f;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-    a:hover {
-      color: #876a1b;
-      text-decoration: underline;
-    }
-    img {
-      max-width: 100%;
-      display: block;
-      border-radius: 12px;
-      box-shadow: 0 10px 20px rgb(0 0 0 / 0.07);
-    }
-    /* Container */
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-    /* Hero */
-    .hero {
-      text-align: center;
-      padding: 5rem 1rem 4rem;
-      background: white;
-      border-bottom: 1px solid #ddd;
-      position: relative;
-      z-index: 10;
-    }
-    .hero h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 3rem;
-      font-weight: 600;
-      line-height: 1.2;
-      color: #1c1c1c;
-      margin-bottom: 1rem;
-      max-width: 720px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .hero p {
-      font-size: 1.3rem;
-      color: #555;
-      margin-bottom: 2rem;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .brand {
-      font-weight: 700;
-      font-size: 1.4rem;
-      letter-spacing: 0.1em;
-      color: #b68e2f;
-      margin-bottom: 2rem;
-      text-transform: uppercase;
-      font-family: 'Playfair Display', serif;
-    }
-    .top-cta a {
-      background: #b68e2f;
-      color: #fff;
-      padding: 1rem 2.8rem;
-      border-radius: 50px;
-      font-size: 1.15rem;
-      font-weight: 600;
-      box-shadow: 0 6px 15px rgb(182 142 47 / 0.4);
-      display: inline-block;
-      transition: background 0.3s ease;
-    }
-    .top-cta a:hover {
-      background: #876a1b;
-    }
-
-    /* Video Section */
-    .video {
-      background: #fff;
-      padding: 3rem 0;
-      display: flex;
-      justify-content: center;
-    }
-    .video video {
-      width: 100%;
-      max-width: 900px;
-      border-radius: 14px;
-      box-shadow: 0 10px 30px rgb(0 0 0 / 0.1);
-    }
-
-    /* Gallery */
-    .gallery {
-      background: #fff;
-      padding: 4rem 2rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2.5rem 3rem;
-      max-width: 1200px;
-      margin: 0 auto 3rem;
-    }
-    .gallery-item {
-      text-align: center;
-    }
-    .gallery-item img {
-      border-radius: 14px;
-      box-shadow: 0 10px 20px rgb(0 0 0 / 0.05);
-      border: 1px solid #eaeaea;
-      margin-bottom: 1rem;
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-    .gallery-item img:hover {
-      transform: scale(1.03);
-      box-shadow: 0 15px 30px rgb(0 0 0 / 0.15);
-    }
-    .gallery-item p {
-      font-size: 1rem;
-      font-style: italic;
-      color: #555;
-      max-width: 280px;
-      margin: 0 auto;
-      user-select: none;
-    }
-
-    /* Details */
-    .details {
-      background: #fcf9f3;
-      max-width: 800px;
-      margin: 0 auto 4rem;
-      padding: 3rem 2rem;
-      border-radius: 14px;
-      box-shadow: 0 5px 15px rgb(182 142 47 / 0.15);
-      text-align: center;
-      font-size: 1.25rem;
-      color: #444;
-      line-height: 1.7;
-      font-weight: 500;
-    }
-    .details p {
-      margin: 0;
-    }
-
-    /* CTA buttons */
-    .cta {
-      text-align: center;
-      margin-bottom: 4rem;
-    }
-    .cta a {
-      background: transparent;
-      color: #b68e2f;
-      border: 2.5px solid #b68e2f;
-      padding: 0.9rem 3.2rem;
-      border-radius: 50px;
-      font-weight: 600;
-      font-size: 1.2rem;
-      margin: 0 1rem;
-      transition: all 0.3s ease;
-      display: inline-block;
-      cursor: pointer;
-      min-width: 170px;
-    }
-    .cta a:hover {
-      background: #b68e2f;
-      color: white;
-      box-shadow: 0 8px 20px rgb(182 142 47 / 0.7);
-    }
-
-    /* Footer */
-    footer {
-      background: #f3f3f3;
-      color: #888;
-      text-align: center;
-      font-size: 0.9rem;
-      padding: 2rem 1rem;
-      border-top: 1px solid #ddd;
-      font-weight: 400;
-    }
-    footer a {
-      color: #b68e2f;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    /* Responsive */
+    /* ... (CSS เดิมทั้งหมด) ... */
+    * { box-sizing: border-box; }
+    body { margin: 0; padding: 0; font-family: 'Merriweather', serif; background: #f9f7f4; color: #2b2b2b; line-height: 1.6; }
+    a { color: #b68e2f; text-decoration: none; transition: color 0.3s ease; }
+    a:hover { color: #876a1b; text-decoration: underline; }
+    img { max-width: 100%; display: block; border-radius: 12px; box-shadow: 0 10px 20px rgb(0 0 0 / 0.07);}
+    .container { max-width: 1200px; margin: 0 auto; padding: 0 20px;}
+    .hero { text-align: center; padding: 5rem 1rem 4rem; background: white; border-bottom: 1px solid #ddd; position: relative; z-index: 10;}
+    .hero h1 { font-family: 'Playfair Display', serif; font-size: 2.45rem; font-weight: 600; line-height: 1.2; color: #1c1c1c; margin-bottom: 1.2rem; max-width: 780px; margin-left: auto; margin-right: auto;}
+    .hero p { font-size: 1.2rem; color: #555; margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;}
+    .brand { font-weight: 700; font-size: 1.3rem; letter-spacing: 0.1em; color: #b68e2f; margin-bottom: 2rem; text-transform: uppercase; font-family: 'Playfair Display', serif;}
+    .top-cta a { background: #b68e2f; color: #fff; padding: 1rem 2.5rem; border-radius: 50px; font-size: 1.08rem; font-weight: 600; box-shadow: 0 6px 15px rgb(182 142 47 / 0.4); display: inline-block; transition: background 0.3s ease;}
+    .top-cta a:hover { background: #876a1b;}
+    .video { background: #fff; padding: 3rem 0; display: flex; justify-content: center;}
+    .video video { width: 100%; max-width: 900px; border-radius: 14px; box-shadow: 0 10px 30px rgb(0 0 0 / 0.1);}
+    .gallery { background: #fff; padding: 4rem 2rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2.5rem 3rem; max-width: 1200px; margin: 0 auto 3rem;}
+    .gallery-item { text-align: center;}
+    .gallery-item img { border-radius: 14px; box-shadow: 0 10px 20px rgb(0 0 0 / 0.05); border: 1px solid #eaeaea; margin-bottom: 1rem; transition: transform 0.3s ease; cursor: pointer;}
+    .gallery-item img:hover { transform: scale(1.03); box-shadow: 0 15px 30px rgb(0 0 0 / 0.15);}
+    .gallery-item p { font-size: 1rem; font-style: italic; color: #555; max-width: 280px; margin: 0 auto; user-select: none;}
+    .details { background: #fcf9f3; max-width: 800px; margin: 0 auto 4rem; padding: 3rem 2rem; border-radius: 14px; box-shadow: 0 5px 15px rgb(182 142 47 / 0.15); text-align: center; font-size: 1.17rem; color: #444; line-height: 1.7; font-weight: 500;}
+    .details p { margin: 0;}
+    .cta { text-align: center; margin-bottom: 4rem;}
+    .cta a { background: transparent; color: #b68e2f; border: 2.5px solid #b68e2f; padding: 0.9rem 3.2rem; border-radius: 50px; font-weight: 600; font-size: 1.1rem; margin: 0 1rem; transition: all 0.3s ease; display: inline-block; cursor: pointer; min-width: 170px;}
+    .cta a:hover { background: #b68e2f; color: white; box-shadow: 0 8px 20px rgb(182 142 47 / 0.7);}
+    footer { background: #f3f3f3; color: #888; text-align: center; font-size: 0.9rem; padding: 2rem 1rem; border-top: 1px solid #ddd; font-weight: 400;}
+    footer a { color: #b68e2f; text-decoration: none; font-weight: 600;}
+    footer a:hover { text-decoration: underline;}
     @media (max-width: 600px) {
-      .hero h1 {
-        font-size: 2rem;
-      }
-      .details {
-        font-size: 1.1rem;
-        padding: 2rem 1.2rem;
-      }
-      .cta a {
-        font-size: 1rem;
-        padding: 0.8rem 2.5rem;
-        min-width: auto;
-        margin: 0.5rem 0.5rem;
-      }
+      .hero h1 { font-size: 1.25rem; }
+      .details { font-size: 1.03rem; padding: 1.4rem 1.1rem;}
+      .cta a { font-size: 1rem; padding: 0.7rem 1.3rem; min-width: auto; margin: 0.5rem 0.5rem;}
     }
   </style>
 </head>
 <body>
   <section class="hero container">
-    <h1>เพชรแท้ ความรักแท้<br>แหวนคู่ที่ใช่... เพื่อวันที่สำคัญที่สุดในชีวิต</h1>
-    <p>คัดสรรเพชรแท้ ดีไซน์หรูเฉพาะคู่คุณ พร้อมบริการสลักชื่อ ส่งฟรีทั่วไทย</p>
+    <h1>แหวนเพชรแท้ GIA<br>แหวนแต่งงานดีไซน์หรู พร้อมใบรับรอง</h1>
+    <p>ร้านแหวนเพชรแท้ GIA ราคาดี แหวนแต่งงานคู่รัก เพชรคัดทุกเม็ด มีใบเซอร์ GIA<br>
+      บริการสลักชื่อ ส่งฟรีทั่วไทย ประสบการณ์กว่า 20 ปีในวงการเพชรแท้</p>
     <div class="brand">Mongkolsiri Diamond</div>
     <div class="top-cta">
-      <a href="https://lin.ee/ZRrK7cl" target="_blank" 
+      <a href="https://lin.ee/ZRrK7cl" target="_blank"
          onclick="return gtag_report_conversion('https://lin.ee/ZRrK7cl'); fbq('track', 'Lead');">
-         💬 ทัก LINE เลย
+         💬 ทัก LINE รับโปรฯ แหวนเพชรแท้
       </a>
     </div>
   </section>
@@ -269,47 +157,51 @@
 
   <section class="gallery container">
     <div class="gallery-item">
-      <img src="ring_image_1.jpeg" alt="ดีไซน์แหวนแต่งงานหรูหรา" />
-      <p>💎 ดีไซน์หรู ดูคลาสสิก เหมาะกับทุกคู่รัก ที่ต้องการความลงตัวในทุกมุมมอง</p>
+      <img src="ring_image_1.jpeg" alt="แหวนเพชรแท้ GIA ดีไซน์หรูหรา" />
+      <p>💎 ดีไซน์หรู คลาสสิก เหมาะกับทุกคู่รักที่ต้องการความลงตัว</p>
     </div>
     <div class="gallery-item">
-      <img src="ring_image_2.jpeg" alt="เพชรแท้คัดเกรด" />
-      <p>✨ เพชรแท้คัดเกรดคุณภาพสูง สะท้อนแสงวิบวับได้ทุกมุมมอง</p>
+      <img src="ring_image_2.jpeg" alt="เพชรแท้ GIA คัดเกรด" />
+      <p>✨ เพชรแท้ GIA คัดเกรด คุณภาพสูง วิบวับทุกมุมมอง</p>
     </div>
     <div class="gallery-item">
-      <img src="ring_image_3.jpeg" alt="แหวนใส่สบายทุกวัน" />
-      <p>💍 สวมใส่ง่าย ใส่ได้ทุกวัน ไม่บาดนิ้ว ด้วยการออกแบบตามหลักสรีรศาสตร์</p>
+      <img src="ring_image_3.jpeg" alt="แหวนแต่งงานสวมใส่สบาย" />
+      <p>💍 สวมใส่สบายทุกวัน ด้วยดีไซน์ตามหลักสรีรศาสตร์</p>
     </div>
     <div class="gallery-item">
-      <img src="ring_image_4.jpeg" alt="กล่องของขวัญพรีเมียม" />
-      <p>🎁 พร้อมกล่องของขวัญพรีเมียม หรูหราสมเกียรติในวันสำคัญของคุณ</p>
+      <img src="ring_image_4.jpeg" alt="กล่องของขวัญแหวนเพชร" />
+      <p>🎁 กล่องของขวัญพรีเมียม สมเกียรติวันสำคัญ</p>
     </div>
   </section>
 
   <section class="details container">
     <p>
-      💍 งานฝีมือปราณีตจากช่างผู้เชี่ยวชาญ<br />
-      ✨ พร้อมกล่องกำมะหยี่หรูหรา ดีไซน์เฉพาะ<br />
-      🧡 บริการสลักชื่อและวันที่สำคัญฟรี<br />
-      📦 จัดส่งฟรีทั่วประเทศ พร้อมการรับประกันคุณภาพ
+      💍 งานฝีมือช่างทองและช่างเพชรโดยตรง<br />
+      ✨ มีใบรับรอง GIA รับประกันเพชรแท้<br />
+      🧡 สลักชื่อ-วันที่สำคัญฟรี (ไม่มีค่าใช้จ่ายเพิ่ม)<br />
+      📦 ส่งฟรีทั่วประเทศ พร้อมบริการหลังการขาย<br />
+      <strong>เน้นแหวนเพชรแท้ GIA และแหวนแต่งงานทุกแบบ</strong>
     </p>
   </section>
 
   <section class="cta container">
-    <a href="https://lin.ee/ZRrK7cl" target="_blank" 
+    <a href="https://lin.ee/ZRrK7cl" target="_blank"
        onclick="return gtag_report_conversion('https://lin.ee/ZRrK7cl'); fbq('track', 'Lead');">
-       💬 สอบถามผ่าน LINE
+       💬 สอบถามราคาแหวนเพชรแท้ GIA
     </a>
-    <a href="https://maps.app.goo.gl/Gy1417mtFmiCC1ud9" target="_blank" 
+    <a href="https://maps.app.goo.gl/Gy1417mtFmiCC1ud9" target="_blank"
        onclick="fbq('track', 'ViewLocation');">
-       📍 ดูแผนที่หน้าร้าน
+       📍 ดูแผนที่หน้าร้าน Mongkolsiri Diamond
     </a>
   </section>
 
   <footer>
     &copy; 2025 Mongkolsiri Diamond | <a href="privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
+    <br>
+    <span>คำค้น: แหวนเพชรแท้, แหวนแต่งงาน, เพชรแท้ GIA, ร้านแหวนเพชรแต่งงาน, diamond wedding ring, gia diamond</span>
   </footer>
 
+  <!-- Google Ads Conversion (LINE Click) -->
   <script>
     function gtag_report_conversion(url) {
       var callback = function () {
